<resources>
    <string name="app_name">Walki</string>
    <string name="title_login">Hola !</string>
    <string name="subtitle_login">Introduce tu número telefónico para iniciar sesión.</string>
    <string name="boton_confir_login">Confirmar</string>
    <string name="title_validar">Codigo de validación</string>
    <string name="title_continuar">CONTINUAR</string>
    <string name="title_tutorial">¿ Eres nuevo ?</string>
    <string name="title_activity_user_main">Vamos a pasear !</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_driver">DriverActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
