<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_fondo_taxxhdpi"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/title_login"
            android:textColor="@color/colorWhite"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:text="@string/subtitle_login"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">



        <EditText
            android:id="@+id/et_phone"
            android:layout_width="232dp"
            android:layout_height="47dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/circulo_login"
            android:inputType="number"
            android:maxLength="13"
            android:padding="7dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:drawableStart="@drawable/ic_flag_peru"
            android:drawablePadding="5dp"


            />

        <Button
            android:id="@+id/button_confir"
            android:layout_width="89dp"
            android:layout_height="27dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_b_confir"
            android:onClick="sendSMSValidation"
            android:text="@string/boton_confir_login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:typeface="normal" />

        <EditText
            android:id="@+id/et_code_vali"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorWhite"
            android:ems="10"
            android:inputType="number"
            android:maxLength="6"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tw_code_vali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:text="@string/title_validar"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="11sp"
            android:visibility="invisible" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/button_cont"
            android:layout_width="164dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_b_contin"
            android:onClick="checkNumPhone"
            android:text="@string/title_continuar"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:text="@string/title_tutorial"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_tutorial"
            android:layout_width="103dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/b_tuto" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>